--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -3,7 +3,7 @@ name: CI flow for Amazon ECS
 on: [push]
 
 env:
-  SLACK_WEBHOOk: https://hooks.slack.com/services/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
+  SLACK_WEBHOOK: https://hooks.slack.com/services/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 ##change this URL!!
 
 jobs:
   ci:
@@ -14,34 +14,33 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    
+
     - name: Unit Test
       run: cd ${{ github.workspace }}
     - run: cd sample-webapp && npm install && npm run test:unit
-    
+
+    # TODO add tests for backend and rest-api
+
     - name: Success
       uses: rtCamp/action-slack-notify@v2.0.2
       if: success()
       env:
-        SLACK_TITLE: CI flow / success
+        SLACK_TITLE: CI flow / Success
         SLACK_COLOR: good
-        SLACK_MESSAGE: MEssage for success
+        SLACK_MESSAGE: Message for Success
 
     - name: Failure
       uses: rtCamp/action-slack-notify@v2.0.2
       if: failure()
       env:
-        SLACK_TITLE: CI flow / failure
+        SLACK_TITLE: CI flow / Failure
         SLACK_COLOR: danger
-        SLACK_MESSAGE: MEssage for failure
+        SLACK_MESSAGE: Message for Failure
 
     - name: Cancel
       uses: rtCamp/action-slack-notify@v2.0.2
       if: cancelled()
       env:
-        SLACK_TITLE: CI flow / cancel
+        SLACK_TITLE: CI flow / Cancel
         SLACK_COLOR: danger
-        SLACK_MESSAGE: MEssage for cancel
-    
-
-    
+        SLACK_MESSAGE: Message for Cancel
