--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -8,8 +8,8 @@ on:
 
 env:
   AWS_REGION: ap-northeast-1
-  ECS_WEBAPP_SERVICE: ecs-sample-webapp
-  ECS_RESTAPI_SERVICE: ecs-sample-restapi
+  ECS_WEBAPP_SERVICE: sample-webapp
+  ECS_RESTAPI_SERVICE: sample-restapi
   WEBAPP_CONTAINER_NAME: ecs-sample-webapp
   BACKEND_CONTAINER_NAME: ecs-sample-backend
   RESTAPI_CONTAINER_NAME: ecs-sample-restapi
